k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: brainyfred
  labels:
    app: brainyfred
spec:
  type: ClusterIP
  ports:
  - port: 443
    targetPort: 5000
    protocol: TCP
    name: wss
  selector:
    app: brainyfred
