k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: brainyfred
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/service.serversscheme: "wss"
spec:
  tls:
  - hosts:
    - ws.ericpp.dev
    secretName: brainyfred-tls
  rules:
  - host: ws.ericpp.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: brainyfred
            port:
              number: 5000
